--- a/css/reset.css
+++ b/css/reset.css
@@ -47,4 +47,8 @@ h1, h2, h3, h4, h5, h6, strong{
     font-weight: normal;
 }
 
+img, span, video, audio, label, input, textarea, select, iframe{
+    display:block;
+}
+
 
